--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-RewriteEngine on
-RewriteCond %{ENV:HTTPS} !on
-RewriteRule ^.*$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteEngine On
+RewriteCond %{HTTPS} !on
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L] 
